--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ RECAPTCHA_SECRET_KEY = "6LcuHzMmAAAAAIlS3_P23gXxL_eGqkrvxnthP-DY"
 
 EMAIL_USERNAME = appelion.director@gmail.com
 EMAIL_PASSWORD = vjuzqebobvvtfthd
-BASE_URL = 'http://localhost:3000'
+BASE_URL = 'http://34.142.75.150/'
